# backend

./: .env.example  .gitignore  .gitpod.yml  CONTRIBUTING.md  README.md  STYLE_GUIDE.md
.devcontainer/: devcontainer.json  docker-compose.yml  requirements.txt
.devcontainer/c-cpp/: devcontainer.json
.devcontainer/go/: devcontainer.json
.devcontainer/node/: devcontainer.json
.devcontainer/python/: devcontainer.json
.devcontainer/ruby/: devcontainer.json
.devcontainer/rust/: devcontainer.json
.devcontainer/seed/: 01-schema.sql
audit/: backend-scorecard.md
benchmarks/: README.md
benchmarks/01-thread-vs-async-vs-event-loop/: README.md
benchmarks/02-tcp-vs-http-overhead/: README.md
benchmarks/03-json-vs-protobuf/: README.md
benchmarks/04-db-indexing-impact/: README.md
benchmarks/05-n-plus-one-vs-batching/: README.md
benchmarks/06-cache-vs-no-cache/: README.md
case-studies/: README.md
enterprise-kit/: backend-audit-checklist.md  migration-playbook.md  onboarding.md
go/: README.md
labs/: MIGRATION-per-lab-repos.md  README.md
playbooks/: README.md  incident-response.md  performance-tuning.md
reference/: README.md  complexity-cheatsheet.md  syscall-reference.md  tcp-ip-reference.md
simulations/: README.md
tooling/: scaffold-lab.sh
tooling/c/: README.md  (+2 more)
tooling/python/labkit/: README.md  pyproject.toml
tooling/python/labkit/labkit/: __init__.py  cache.py  db.py
tooling/python/labkit/labkit.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tooling/rust/labkit/: Cargo.toml  README.md
tooling/rust/labkit/src/: lib.rs
(+165 files in other folders)
